src/snapshots/purs_oxide__renamed_module__tests__import_all_fns.snap
---
source: src/renamed_module.rs
expression: "import_decls(indoc!(\"\n        module Test where\n        import Lib2\n        \"),\n    vec![LIB2])"
---
(
    [
        (
            None,
            DeclId {
                namespace: Value,
                module: ModuleId {
                    name: "Lib2",
                },
                name: Symbol {
                    text: "x",
                },
            },
        ),
        (
            None,
            DeclId {
                namespace: Value,
                module: ModuleId {
                    name: "Lib2",
                },
                name: Symbol {
                    text: "y",
                },
            },
        ),
    ],
    [],
)
