src/snapshots/purs_oxide__renamed_module__tests__import_data_decl.snap
---
source: src/renamed_module.rs
expression: "import_decls(indoc!(\"\n        module Test where\n        \n        import Foo (Foo(..))\n        \"),\n    vec![LIB1])"
---
(
    [
        (
            None,
            DeclId {
                namespace: Type,
                module: ModuleId {
                    name: "Foo",
                },
                name: Symbol {
                    text: "Foo",
                },
            },
        ),
    ],
    [],
)
