src/snapshots/purs_oxide__renamed_module__tests__import_data_qualified_decl.snap
---
source: src/renamed_module.rs
expression: "import_decls(indoc!(\"\n        module Test where\n        \n        import Lib as Lib\n        \"),\n    vec![LIB1])"
---
(
    [
        (
            Some(
                ModuleId {
                    name: "Lib",
                },
            ),
            DeclId {
                namespace: Type,
                module: ModuleId {
                    name: "Lib",
                },
                name: Symbol {
                    text: "Foo",
                },
            },
        ),
    ],
    [],
)
