src/snapshots/purs_oxide__renamed_module__tests__import_subset.snap
---
source: src/renamed_module.rs
expression: "import_decls(indoc!(\"\n        module Test where\n        import Lib2 (x)\n        \"))"
---
(
    [
        (
            None,
            DeclId {
                namespace: Value,
                module: ModuleId {
                    [salsa id]: 2,
                    name: "Lib2",
                },
                name: Symbol {
                    [salsa id]: 0,
                    text: "x",
                },
            },
        ),
    ],
    [],
)
