src/snapshots/purs_oxide__renamed_module__tests__reexport_qualified.snap
---
source: src/renamed_module.rs
expression: "export_decls(indoc!(\"\n            module Test\n              ( module L\n              , x ) where\n            \n            import Lib as L\n            \n            x = 1\n            \"))"
---
(
    [
        DeclId {
            [salsa id]: 0,
            namespace: Type,
            module: ModuleId {
                [salsa id]: 1,
                name: "Lib",
            },
            name: Symbol {
                [salsa id]: 1,
                text: "Foo",
            },
        },
        DeclId {
            [salsa id]: 1,
            namespace: Value,
            module: ModuleId {
                [salsa id]: 0,
                name: "Test",
            },
            name: Symbol {
                [salsa id]: 0,
                text: "x",
            },
        },
    ],
    [],
)
